# CSE207_Word_Dictionary_project

./: CMakeLists.txt  README.md  outline.md
data/: database
docs/: CSE207 Project Report.docx  CSE207_presentation-slide_group-05(3).pptx  outline.md  screenshot_outline_for_report.md
include/: bst.h  bst.tpp  list.h  list.tpp  singly_linked_list.h  singly_linked_list.tpp  utility.h  word.h
src/: main.cpp  utility.cpp  word.cpp
src/include/: binary_search_tree.cpp  binary_search_tree.h  bst.h  bst.tpp  singly_linked_list.h  singly_linked_list.tpp  test_bst.cpp  word.h  word.tpp
tests/: test  test_bst.cpp  test_list.cpp  test_singly_linked_list.cpp  test_word.cpp
